<resources>
    <string name="app_name">MNIST App</string>
    <string name="title_activity_order_calculator">Order Calculator</string>
    <string name="title_activity_canvas">CanvasActivity</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_price">Price</string>
    <string name="label_order">Order</string>
    <string name="label_money_sign">$</string>
    <string name="label_ascii_minus">-</string>
    <string name="label_ascii_plus">+</string>
    <string name="msg_invalid_action">Invalid action</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://api.mnist.rodrigo-silveira.com:669\",\n  }\n}]</string>
</resources>
